Add material UI

--- a/src/styles.css
+++ b/src/styles.css
@@ -581,3 +581,6 @@ p {
     break-after: avoid;
   }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
